# amazon-freertos

./: .gitmodules
demos/: CMakeLists.txt
demos/demo_runner/: aws_demo_version.c
demos/include/: aws_application_version.h  iot_demo_runner.h
demos/network_manager/: aws_iot_demo_network.c
demos/ota/: CMakeLists.txt  demo_config.h  ota_config.h  ota_demo_core_mqtt.c
demos/ota/ota_demo_core_http/: CMakeLists.txt  ota_demo_core_http.c
demos/ota/ota_demo_core_mqtt/: CMakeLists.txt  ota_demo_core_mqtt.c
doc/lib/: https.txt
libraries/: CMakeLists.txt  ota.cmake  ota_demo_dependencies.cmake
libraries/coreMQTTAgent/source/: freertos_mqtt_agent.c
projects/nordic/nrf52840-dk/ses/aws_demos/: aws_demos.emProject
projects/nordic/nrf52840-dk/ses/aws_tests/: aws_tests.emProject
projects/pc/windows/visual_studio/aws_demos/: aws_demos.vcxproj  aws_demos.vcxproj.filters
projects/ti/cc3220_launchpad/ccs/aws_demos/: .cproject  .project
tests/integration_test/ota_pal/: aws_test_ota_pal.c
tools/ota_e2e_tests/aws_ota_test/: aws_ota_project.py
vendors/cypress/MTB/ota/ports/CY8CKIT_064S0S2_4343W/: aws_ota_pal.c
vendors/cypress/boards/CY8CKIT_064S0S2_4343W/aws_demos/config_files/: aws_demo_config.h  ota_config.h
vendors/cypress/boards/CY8CKIT_064S0S2_4343W/aws_tests/config_files/: ota_config.h
vendors/cypress/boards/CYW954907AEVAL1F/aws_demos/config_files/: aws_demo_config.h
vendors/cypress/boards/CYW954907AEVAL1F/aws_tests/config_files/: ota_config.h
vendors/espressif/boards/esp32/: CMakeLists.txt
vendors/espressif/boards/esp32/aws_demos/config_files/: aws_demo_config.h  aws_ota_agent_config.h  ota_config.h
vendors/espressif/boards/esp32/aws_tests/config_files/: aws_demo_config.h  ota_config.h
vendors/espressif/boards/esp32/ports/ota/: aws_ota_pal.c
vendors/espressif/boards/esp32/ports/ota_pal_for_aws/: ota_pal.c  ota_pal.h
vendors/espressif/boards/ports/ota_pal_for_aws/: ota_pal.c
vendors/microchip/boards/curiosity_pic32mzef/aws_demos/config_files/: aws_demo_config.h  ota_config.h
vendors/microchip/boards/curiosity_pic32mzef/aws_tests/config_files/: ota_config.h
vendors/microchip/boards/curiosity_pic32mzef/ports/ota/: aws_nvm.h  aws_ota_pal.c
vendors/nordic/boards/nrf52840-dk/ports/ota/: aws_ota_pal.c
vendors/pc/boards/windows/: CMakeLists.txt
vendors/ti/boards/cc3220_launchpad/: CMakeLists.txt
(+30 files in other folders)
